<resources>
    <string name="app_name">DongSan2Mong</string>
    <string name="menu_title_map">map</string>
    <string name="menu_title_wishlist">wishlist</string>
    <string name="menu_title_comparison">comparison</string>
    <string name="menu_title_planner">planner</string>

    <string name="map_option_area">지역</string>
    <string name="map_option_building_type">건물유형</string>
    <string name="map_option_property_type">매물유형</string>
    <string name="map_option_example1">예시1</string>
    <string name="map_option_example2">예시2</string>
</resources>