<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapMenu"
        android:icon="@drawable/icon_location_selector"
        android:checked="true"
        android:enabled="true"
        android:title="@string/menu_title_map" />
    <item
        android:id="@+id/wishlistMenu"
        android:icon="@drawable/icon_wishlist_selector"
        android:enabled="true"
        android:title="@string/menu_title_wishlist" />
    <item
        android:id="@+id/comparisonMenu"
        android:icon="@drawable/icon_comparison_selector"
        android:enabled="true"
        android:title="@string/menu_title_comparison" />
    <item
        android:id="@+id/plannerMenu"
        android:icon="@drawable/icon_planner_empty"
        android:enabled="true"
        android:title="@string/menu_title_planner" />

</menu>