<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="지도가 들어오는 위치" />
    </LinearLayout>


    <!-- 슬라이드 메뉴 -->
    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/notificationBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_notifications_on" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="진알양"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="alchonjoa@konkuk.ac.kr"
            android:textColor="#999999"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="알림 설정"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="시작화면 설정"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="로그아웃"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_sidemenu_close" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_option_area"
                android:layout_marginHorizontal="7dp"
                android:textSize="16sp"
                android:textStyle="bold"

                android:paddingHorizontal="6dp"
                android:paddingVertical="3dp"

                android:background="@drawable/background_map_option_selected"
                android:textColor="@color/main_blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_option_building_type"
                android:layout_marginHorizontal="7dp"
                android:textSize="16sp"
                android:textStyle="bold"

                android:paddingHorizontal="6dp"
                android:paddingVertical="3dp"

                android:textColor="@color/gray_unselected_option"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_option_property_type"
                android:layout_marginHorizontal="7dp"
                android:textSize="16sp"
                android:textStyle="bold"

                android:paddingHorizontal="6dp"
                android:paddingVertical="3dp"

                android:textColor="@color/gray_unselected_option"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_option_example1"
                android:layout_marginHorizontal="7dp"
                android:textSize="16sp"
                android:textStyle="bold"

                android:paddingHorizontal="6dp"
                android:paddingVertical="3dp"

                android:textColor="@color/gray_unselected_option"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_option_example2"
                android:layout_marginHorizontal="7dp"
                android:textSize="16sp"
                android:textStyle="bold"

                android:paddingHorizontal="6dp"
                android:paddingVertical="3dp"

                android:textColor="@color/gray_unselected_option"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icon_map_arrow_down"
            />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mapcapture"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_map_option_expand"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textAlignment="center"
                android:text="option will be here..."
                />

        </LinearLayout>

    </FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>